// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GDatePickerHeader.js should render component and match snapshot 1`] = `
<div class="g-date-picker-header">
  <div class="g-date-picker-header__value">
    <div name="tab-transition">
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button class="g-date-picker-header__prev-button">
  </button>
  <button class="g-date-picker-header__next-button">
  </button>
</div>
`;

exports[`GDatePickerHeader.js should render component with default slot and match snapshot 1`] = `
<div class="g-date-picker-header">
  <div class="g-date-picker-header__value">
    <div name="tab-transition">
      <button type="button">
        <span>
          foo
        </span>
      </button>
    </div>
  </div>
  <button class="g-date-picker-header__prev-button">
  </button>
  <button class="g-date-picker-header__next-button">
  </button>
</div>
`;

exports[`GDatePickerHeader.js should render disabled component and match snapshot 1`] = `
<div class="g-date-picker-header g-date-picker-header--disabled">
  <div class="g-date-picker-header__value g-date-picker-header__value--disabled">
    <div name="tab-transition">
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button disabled="disabled"
          class="g-date-picker-header__prev-button"
  >
  </button>
  <button disabled="disabled"
          class="g-date-picker-header__next-button"
  >
  </button>
</div>
`;

exports[`GDatePickerHeader.js should render readonly component and match snapshot 1`] = `
<div class="g-date-picker-header">
  <div class="g-date-picker-header__value">
    <div name="tab-transition">
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button class="g-date-picker-header__prev-button">
  </button>
  <button class="g-date-picker-header__next-button">
  </button>
</div>
`;

exports[`GDatePickerTitle.js should render component and match snapshot 1`] = `
<div class="g-date-picker-header">
  <div class="g-date-picker-header__value">
    <div name="tab-transition">
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button class="g-date-picker-header__prev-button">
  </button>
  <button class="g-date-picker-header__next-button">
  </button>
</div>
`;

exports[`GDatePickerTitle.js should render component with default slot and match snapshot 1`] = `
<div class="g-date-picker-header">
  <div class="g-date-picker-header__value">
    <div name="tab-transition">
      <button type="button">
        <span>
          foo
        </span>
      </button>
    </div>
  </div>
  <button class="g-date-picker-header__prev-button">
  </button>
  <button class="g-date-picker-header__next-button">
  </button>
</div>
`;

exports[`GDatePickerTitle.js should render disabled component and match snapshot 1`] = `
<div class="g-date-picker-header g-date-picker-header--disabled">
  <div class="g-date-picker-header__value g-date-picker-header__value--disabled">
    <div name="tab-transition">
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button disabled="disabled"
          class="g-date-picker-header__prev-button"
  >
  </button>
  <button disabled="disabled"
          class="g-date-picker-header__next-button"
  >
  </button>
</div>
`;

exports[`GDatePickerTitle.js should render readonly component and match snapshot 1`] = `
<div class="g-date-picker-header">
  <div class="g-date-picker-header__value">
    <div name="tab-transition">
      <button type="button">
        November 2005
      </button>
    </div>
  </div>
  <button class="g-date-picker-header__prev-button">
  </button>
  <button class="g-date-picker-header__next-button">
  </button>
</div>
`;
